packages/dartcv/src/core/mat.h

CvStatus* cv_Mat_ones(int rows, int cols, int type, Mat* rval, CvCallback_0 callback);
bool cv_Mat_isContinuous(Mat self);
bool cv_Mat_isSubmatrix(Mat self);
CvStatus* cv_Mat_locateROI(Mat self, CvSize* wholeSize, CvPoint* ofs, CvCallback_0 callback);
CvStatus* cv_Mat_mean(Mat self, Scalar* rval, CvCallback_0 callback);
CvStatus* cv_Mat_mean_1(Mat self, Mat mask, Scalar* rval, CvCallback_0 callback);
uint8_t cv_Mat_get_u8_1(Mat self, int i0);
uint8_t cv_Mat_get_u8_2(Mat self, int i0, int i1);
uint8_t cv_Mat_get_u8_3(Mat self, int i0, int i1, int i2);
int8_t cv_Mat_get_i8_1(Mat self, int i0);
int8_t cv_Mat_get_i8_2(Mat self, int i0, int i1);
int8_t cv_Mat_get_i8_3(Mat self, int i0, int i1, int i2);
uint16_t cv_Mat_get_u16_1(Mat self, int i0);
uint16_t cv_Mat_get_u16_2(Mat self, int i0, int i1);
uint16_t cv_Mat_get_u16_3(Mat self, int i0, int i1, int i2);
int32_t cv_Mat_get_i32_3(Mat self, int i0, int i1, int i2);
CvStatus* cv_Mat_op_add_mat(Mat self, Mat val);
CvStatus* cv_Mat_op_add_u8(Mat self, uint8_t val);
CvStatus* cv_Mat_op_add_i8(Mat self, int8_t val);
CvStatus* cv_Mat_op_add_i16(Mat self, int16_t val);
CvStatus* cv_Mat_op_div_i16(Mat self, int16_t val);
CvStatus* cv_Mat_op_add_u16(Mat self, uint16_t val);
CvStatus* cv_Mat_op_add_i32(Mat self, int32_t val);
CvStatus* cv_Mat_op_add_f32(Mat self, float_t val);
CvStatus* cv_Mat_op_div_f32(Mat self, float_t val);
CvStatus* cv_Mat_op_add_f64(Mat self, double_t val);
CvStatus* cv_Mat_op_div_f64(Mat self, double_t val);
/*
 * element-wise
 */
CvStatus* cv_Mat_mul(Mat self, Mat val, Mat* dst, double scale);