packages/dartcv/lib/src/g/core.g.dart


  late final _cv_Mat_get_i32_3Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Int32 Function(Mat, ffi.Int, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_i32_3');
  late final _cv_Mat_get_i32_3 = _cv_Mat_get_i32_3Ptr
      .asFunction<int Function(Mat, int, int, int)>(isLeaf: true);

  int cv_Mat_get_i8_1(
    Mat self,
    int i0,
  ) {
    return _cv_Mat_get_i8_1(
      self,
      i0,
    );
  }

  late final _cv_Mat_get_i8_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Int8 Function(Mat, ffi.Int)>>(
          'cv_Mat_get_i8_1');
  late final _cv_Mat_get_i8_1 =
      _cv_Mat_get_i8_1Ptr.asFunction<int Function(Mat, int)>(isLeaf: true);

  int cv_Mat_get_i8_2(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_i8_2(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_i8_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Int8 Function(Mat, ffi.Int, ffi.Int)>>(
          'cv_Mat_get_i8_2');
  late final _cv_Mat_get_i8_2 =
      _cv_Mat_get_i8_2Ptr.asFunction<int Function(Mat, int, int)>(isLeaf: true);

  int cv_Mat_get_i8_3(
    Mat self,
    int i0,
    int i1,
    int i2,
  ) {
    return _cv_Mat_get_i8_3(
      self,
      i0,
      i1,
      i2,
    );
  }

  late final _cv_Mat_get_i8_3Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Int8 Function(Mat, ffi.Int, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_i8_3');
  late final _cv_Mat_get_i8_3 = _cv_Mat_get_i8_3Ptr
      .asFunction<int Function(Mat, int, int, int)>(isLeaf: true);

  int cv_Mat_get_u16_1(
    Mat self,
    int i0,
  ) {
    return _cv_Mat_get_u16_1(
      self,
      i0,
    );
  }

  late final _cv_Mat_get_u16_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function(Mat, ffi.Int)>>(
          'cv_Mat_get_u16_1');
  late final _cv_Mat_get_u16_1 =
      _cv_Mat_get_u16_1Ptr.asFunction<int Function(Mat, int)>(isLeaf: true);

  int cv_Mat_get_u16_2(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_u16_2(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_u16_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function(Mat, ffi.Int, ffi.Int)>>(
          'cv_Mat_get_u16_2');
  late final _cv_Mat_get_u16_2 = _cv_Mat_get_u16_2Ptr
      .asFunction<int Function(Mat, int, int)>(isLeaf: true);

  int cv_Mat_get_u16_3(
    Mat self,
    int i0,
    int i1,
    int i2,
  ) {
    return _cv_Mat_get_u16_3(
      self,
      i0,
      i1,
      i2,
    );
  }

  late final _cv_Mat_get_u16_3Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Uint16 Function(Mat, ffi.Int, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_u16_3');
  late final _cv_Mat_get_u16_3 = _cv_Mat_get_u16_3Ptr
      .asFunction<int Function(Mat, int, int, int)>(isLeaf: true);

  int cv_Mat_get_u8_1(
    Mat self,
    int i0,
  ) {
    return _cv_Mat_get_u8_1(
      self,
      i0,
    );
  }

  late final _cv_Mat_get_u8_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(Mat, ffi.Int)>>(
          'cv_Mat_get_u8_1');
  late final _cv_Mat_get_u8_1 =
      _cv_Mat_get_u8_1Ptr.asFunction<int Function(Mat, int)>(isLeaf: true);

  int cv_Mat_get_u8_2(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_u8_2(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_u8_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(Mat, ffi.Int, ffi.Int)>>(
          'cv_Mat_get_u8_2');
  late final _cv_Mat_get_u8_2 =
      _cv_Mat_get_u8_2Ptr.asFunction<int Function(Mat, int, int)>(isLeaf: true);

  int cv_Mat_get_u8_3(
    Mat self,
    int i0,
    int i1,
    int i2,
  ) {
    return _cv_Mat_get_u8_3(
      self,
      i0,
      i1,
      i2,
    );
  }

  late final _cv_Mat_get_u8_3Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Uint8 Function(Mat, ffi.Int, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_u8_3');
  late final _cv_Mat_get_u8_3 = _cv_Mat_get_u8_3Ptr
      .asFunction<int Function(Mat, int, int, int)>(isLeaf: true);

  bool cv_Mat_isContinuous(
    Mat self,
  ) {
    return _cv_Mat_isContinuous(
      self,
    );
  }

  late final _cv_Mat_isContinuousPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Mat)>>(
          'cv_Mat_isContinuous');
  late final _cv_Mat_isContinuous =
      _cv_Mat_isContinuousPtr.asFunction<bool Function(Mat)>(isLeaf: true);

  bool cv_Mat_isSubmatrix(
    Mat self,
  ) {
    return _cv_Mat_isSubmatrix(
      self,
    );
  }

  late final _cv_Mat_isSubmatrixPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Mat)>>('cv_Mat_isSubmatrix');
  late final _cv_Mat_isSubmatrix =
      _cv_Mat_isSubmatrixPtr.asFunction<bool Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> cv_Mat_locateROI(
    Mat self,
    ffi.Pointer<CvSize> wholeSize,
    ffi.Pointer<CvPoint> ofs,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_locateROI(
      self,
      wholeSize,
      ofs,
      callback,
    );
  }

  late final _cv_Mat_locateROIPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<CvSize>,
              ffi.Pointer<CvPoint>, imp1.CvCallback_0)>>('cv_Mat_locateROI');
  late final _cv_Mat_locateROI = _cv_Mat_locateROIPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<CvSize>, ffi.Pointer<CvPoint>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_mean(
    Mat self,
    ffi.Pointer<Scalar> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_mean(
      self,
      rval,
      callback,
    );
  }

  late final _cv_Mat_meanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<Scalar>, imp1.CvCallback_0)>>('cv_Mat_mean');
  late final _cv_Mat_mean = _cv_Mat_meanPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<Scalar>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_mean_1(
    Mat self,
    Mat mask,
    ffi.Pointer<Scalar> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_mean_1(
      self,
      mask,
      rval,
      callback,
    );
  }

  late final _cv_Mat_mean_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<Scalar>,
              imp1.CvCallback_0)>>('cv_Mat_mean_1');
  late final _cv_Mat_mean_1 = _cv_Mat_mean_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, ffi.Pointer<Scalar>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_mul(
    Mat self,
    Mat val,
    ffi.Pointer<Mat> dst,
    double scale,
  ) {
    return _cv_Mat_mul(
      self,
      val,
      dst,
      scale,
    );
  }

  late final _cv_Mat_mulPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Pointer<Mat>, ffi.Double)>>('cv_Mat_mul');
  late final _cv_Mat_mul = _cv_Mat_mulPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<Mat>, double)>();

  ffi.Pointer<CvStatus> cv_Mat_ones(
    int rows,
    int cols,
    int type,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_ones(
      rows,
      cols,
      type,
      rval,
      callback,
    );
  }

  late final _cv_Mat_onesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_ones');
  late final _cv_Mat_ones = _cv_Mat_onesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          int, int, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_op_add_f32(
    Mat self,
    double val,
  ) {
    return _cv_Mat_op_add_f32(
      self,
      val,
    );
  }

  late final _cv_Mat_op_add_f32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, float_t)>>(
          'cv_Mat_op_add_f32');
  late final _cv_Mat_op_add_f32 = _cv_Mat_op_add_f32Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> cv_Mat_op_add_f64(
    Mat self,
    double val,
  ) {
    return _cv_Mat_op_add_f64(
      self,
      val,
    );
  }

  late final _cv_Mat_op_add_f64Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, double_t)>>(
      'cv_Mat_op_add_f64');
  late final _cv_Mat_op_add_f64 = _cv_Mat_op_add_f64Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> cv_Mat_op_add_i16(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_add_i16(
      self,
      val,
    );
  }

  late final _cv_Mat_op_add_i16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>>(
      'cv_Mat_op_add_i16');
  late final _cv_Mat_op_add_i16 = _cv_Mat_op_add_i16Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_add_i32(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_add_i32(
      self,
      val,
    );
  }

  late final _cv_Mat_op_add_i32Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>>(
      'cv_Mat_op_add_i32');
  late final _cv_Mat_op_add_i32 = _cv_Mat_op_add_i32Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_add_i8(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_add_i8(
      self,
      val,
    );
  }

  late final _cv_Mat_op_add_i8Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>>(
      'cv_Mat_op_add_i8');
  late final _cv_Mat_op_add_i8 = _cv_Mat_op_add_i8Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_add_mat(
    Mat self,
    Mat val,
  ) {
    return _cv_Mat_op_add_mat(
      self,
      val,
    );
  }

  late final _cv_Mat_op_add_matPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'cv_Mat_op_add_mat');
  late final _cv_Mat_op_add_mat = _cv_Mat_op_add_matPtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> cv_Mat_op_add_u16(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_add_u16(
      self,
      val,
    );
  }

  late final _cv_Mat_op_add_u16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>>(
      'cv_Mat_op_add_u16');
  late final _cv_Mat_op_add_u16 = _cv_Mat_op_add_u16Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_add_u8(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_add_u8(
      self,
      val,
    );
  }

  late final _cv_Mat_op_add_u8Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>>(
      'cv_Mat_op_add_u8');
  late final _cv_Mat_op_add_u8 = _cv_Mat_op_add_u8Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_div_f32(
    Mat self,
    double val,
  ) {
    return _cv_Mat_op_div_f32(
      self,
      val,
    );
  }

  late final _cv_Mat_op_div_f32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, float_t)>>(
          'cv_Mat_op_div_f32');
  late final _cv_Mat_op_div_f32 = _cv_Mat_op_div_f32Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> cv_Mat_op_div_f64(
    Mat self,
    double val,
  ) {
    return _cv_Mat_op_div_f64(
      self,
      val,
    );
  }

  late final _cv_Mat_op_div_f64Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, double_t)>>(
      'cv_Mat_op_div_f64');
  late final _cv_Mat_op_div_f64 = _cv_Mat_op_div_f64Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> cv_Mat_op_div_i16(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_div_i16(
      self,
      val,
    );
  }
